<resources>

    <string name="app_name">FinanzasApp</string>

    <string name="logo_desc">Logo</string>
    <string name="subtitle">Controla tus finanzas fácilmente</string>

    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>

    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>

    <!-- Dashboard -->
    <string name="bienvenido">Bienvenido, Usuario</string>
    <string name="ingresos_mes">Ingresos del Mes</string>
    <string name="gastos_mes">Gastos del Mes</string>
    <string name="balance_actual">Balance Actual</string>
    <string name="movimientos">Últimos Movimientos</string>

    <!-- VALORES (ESTO SOLUCIONA TU ERROR) -->
    <string name="valor_ingresos">$2,100,000</string>
    <string name="valor_cero">$0</string>
    <string name="valor_balance">$0</string>

    <string name="agregar">Agregar</string>

    <string name="monto">Monto</string>
    <string name="categoria">Categoría</string>
    <string name="ingreso">Ingreso</string>
    <string name="gasto">Gasto</string>
    <string name="guardar">Guardar</string>

</resources>